flux/infra/flux-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webui
  namespace: flux-system
spec:
  parentRefs:
    - name: public
      namespace: cilium-gateway
      sectionName: http-k8s-home-arpa
  hostnames:
    - flux.k8s.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          port: 9080
